{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 66,
  "lineage": "fa90e280-63af-c09c-6d26-41fae71a134f",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:916765007110:subnet/subnet-0f005a9a8bece7621",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Subnet-Public : Public Subnet 1"
                ]
              }
            ],
            "id": "subnet-0f005a9a8bece7621",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "916765007110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Subnet-Public : Public Subnet 1"
            },
            "vpc_id": "vpc-0d6ed1d96e0014b66"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c81345fde437fbce",
            "domain": "vpc",
            "id": "eipalloc-0c81345fde437fbce",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-52-53-50-56.us-west-1.compute.amazonaws.com",
            "public_ip": "52.53.50.56",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a80c786cd81d5374",
            "domain": "vpc",
            "id": "eipalloc-0a80c786cd81d5374",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-219-51-159.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.51.159",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce2cb35386fc22e9",
            "arn": "arn:aws:ec2:us-west-1:916765007110:instance/i-0ca688dfe2b6a370e",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca688dfe2b6a370e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "temp-key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ecd8488d9cd7a58e",
            "private_dns": "ip-10-0-1-91.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-083f0d377357232b7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f005a9a8bece7621",
            "tags": {
              "Name": "EC2 Public Subnet 1"
            },
            "tags_all": {
              "Name": "EC2 Public Subnet 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a8496baa88581c05"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_demo_route_table",
            "aws_route_table_association.public_subnet_asso",
            "aws_security_group.sg_demo_vpc",
            "aws_subnet.demo_public_subnet",
            "aws_vpc.demo-vpc",
            "data.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:916765007110:internet-gateway/igw-0e787e4c1761e8f44",
            "id": "igw-0e787e4c1761e8f44",
            "owner_id": "916765007110",
            "tags": {
              "Name": "IGW: for demo vpc"
            },
            "tags_all": {
              "Name": "IGW: for demo vpc"
            },
            "vpc_id": "vpc-0d6ed1d96e0014b66"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c81345fde437fbce",
            "association_id": "eipassoc-025c304e8bc1c6bbd",
            "connectivity_type": "public",
            "id": "nat-05575085dcb6c4123",
            "network_interface_id": "eni-0e67747b9b003037e",
            "private_ip": "10.0.3.160",
            "public_ip": "52.53.50.56",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09a8d44dab437fc44",
            "tags": {
              "Name": "Private NAT GW"
            },
            "tags_all": {
              "Name": "Private NAT GW"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.demo_private_subnet",
            "aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a80c786cd81d5374",
            "association_id": "eipassoc-001f5e2ebc83ca1c3",
            "connectivity_type": "public",
            "id": "nat-0f660296ff73f4266",
            "network_interface_id": "eni-01b276d2dc02de7d0",
            "private_ip": "10.0.4.137",
            "public_ip": "54.219.51.159",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f0e17741d67c241c",
            "tags": {
              "Name": "Private NAT GW"
            },
            "tags_all": {
              "Name": "Private NAT GW"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.demo_private_subnet",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_demo_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:916765007110:route-table/rtb-00a39f3c2a04fe9b4",
            "id": "rtb-00a39f3c2a04fe9b4",
            "owner_id": "916765007110",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05575085dcb6c4123",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT Private"
            },
            "tags_all": {
              "Name": "RT Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6ed1d96e0014b66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.demo_private_subnet",
            "aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:916765007110:route-table/rtb-02914a461035b9459",
            "id": "rtb-02914a461035b9459",
            "owner_id": "916765007110",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f660296ff73f4266",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT Private"
            },
            "tags_all": {
              "Name": "RT Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6ed1d96e0014b66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.demo_private_subnet",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_demo_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:916765007110:route-table/rtb-06c493a4a83df5578",
            "id": "rtb-06c493a4a83df5578",
            "owner_id": "916765007110",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e787e4c1761e8f44",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT Public"
            },
            "tags_all": {
              "Name": "RT Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6ed1d96e0014b66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027a21503368bfc6c",
            "route_table_id": "rtb-00a39f3c2a04fe9b4",
            "subnet_id": "subnet-09a8d44dab437fc44"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_demo_route_table",
            "aws_subnet.demo_private_subnet",
            "aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c4a82878ae5e352",
            "route_table_id": "rtb-02914a461035b9459",
            "subnet_id": "subnet-0f0e17741d67c241c"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_demo_route_table",
            "aws_subnet.demo_private_subnet",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ad69e7762b7f391",
            "route_table_id": "rtb-06c493a4a83df5578",
            "subnet_id": "subnet-0f005a9a8bece7621"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_demo_route_table",
            "aws_subnet.demo_public_subnet",
            "aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0046603ba75746e96",
            "route_table_id": "rtb-06c493a4a83df5578",
            "subnet_id": "subnet-0ceda2ed20f95e543"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_demo_route_table",
            "aws_subnet.demo_public_subnet",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_demo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:916765007110:security-group/sg-0a8496baa88581c05",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8496baa88581c05",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240222025604840200000001",
            "name_prefix": "terraform-",
            "owner_id": "916765007110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG : demo-vpc"
            },
            "tags_all": {
              "Name": "SG : demo-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6ed1d96e0014b66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:916765007110:subnet/subnet-09a8d44dab437fc44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a8d44dab437fc44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "916765007110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Private : Private Subnet 1"
            },
            "tags_all": {
              "Name": "Subnet-Private : Private Subnet 1"
            },
            "vpc_id": "vpc-0d6ed1d96e0014b66"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:916765007110:subnet/subnet-0f0e17741d67c241c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0e17741d67c241c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "916765007110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Private : Private Subnet 2"
            },
            "tags_all": {
              "Name": "Subnet-Private : Private Subnet 2"
            },
            "vpc_id": "vpc-0d6ed1d96e0014b66"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:916765007110:subnet/subnet-0f005a9a8bece7621",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f005a9a8bece7621",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "916765007110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Public : Public Subnet 1"
            },
            "tags_all": {
              "Name": "Subnet-Public : Public Subnet 1"
            },
            "vpc_id": "vpc-0d6ed1d96e0014b66"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:916765007110:subnet/subnet-0ceda2ed20f95e543",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ceda2ed20f95e543",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "916765007110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Public : Public Subnet 2"
            },
            "tags_all": {
              "Name": "Subnet-Public : Public Subnet 2"
            },
            "vpc_id": "vpc-0d6ed1d96e0014b66"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:916765007110:vpc/vpc-0d6ed1d96e0014b66",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-014c81c8d7b099162",
            "default_route_table_id": "rtb-0b025e3ed73b0529b",
            "default_security_group_id": "sg-09c8256214e20163a",
            "dhcp_options_id": "dopt-02778ffaeecce0968",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d6ed1d96e0014b66",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b025e3ed73b0529b",
            "owner_id": "916765007110",
            "tags": {
              "Name": "VPC = demo-us-west-1"
            },
            "tags_all": {
              "Name": "VPC = demo-us-west-1"
            }
          }
        }
      ]
    }
  ]
}